# foodrescure

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  package-lock.json
infra/mosquitto/: entrypoint.sh  mosquitto.conf
infra/nginx/: Dockerfile  (+1 more)
server/: .dockerignore  Dockerfile  alembic.ini  check_nodes.py  create_users.py  demo_seed.py  fix_db.py  migrate_node.py  pyproject.toml  rename_users.py  requirements.txt  reset_reservations.py  update_ips.py  update_latlng.py
server/alembic/: env.py
server/alembic/versions/: 5411e6468053_add_tailscale_and_reservations.py  6a885f3e4a59_initial_schema.py  7f908ca59045_user_material_balances.py  9121b9616e79_food_classes_display_name_zh.py
server/app/: config.py  main.py  scheduler.py  security.py
server/app/api/: account.py  auth.py  bounties.py  deps.py  feedback.py  nodes.py  salvage.py  stats.py  tailscale.py
server/app/bridge/: mqtt_bridge.py
server/app/db/: base.py  models.py  session.py
server/app/engine/: bounties.py  decay.py  economy.py  entropy.py  salvage.py
server/app/schemas/: mqtt.py  rest.py  ws.py
server/app/seed/: config_data.py  config_seed.py  dev_seed.py  mock_data.py  seed_physical_users.py
server/app/ws/: events.py  manager.py  router.py
server/scripts/: sim_edge.py  tailscale_locker_api.py  ws_listen.py
server/tests/: conftest.py  test_api.py  test_bounties.py  test_contracts.py  test_decay.py  test_economy.py  test_salvage.py
web/: eslint.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
(+53 files in other folders)
