[project]
name = "glitch-salvage-server"
version = "0.1.0"
description = "Glitch Salvage backend — MQTT bridge, economy/decay engines, REST + WS API"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "W"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.per-file-ignores]
# Alembic emits these from its Mako header / generated DDL; not worth fighting.
"alembic/versions/*" = ["W291", "E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
filterwarnings = [
    # passlib reads the stdlib `crypt` module, deprecated in 3.11; harmless here.
    "ignore:'crypt' is deprecated:DeprecationWarning",
]
